# plantmd

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  app.py  demo.py  predict.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: huggingface-space-readme.md
models/: README.md  disease_description.csv  model_vgg16_2.hdf5
src/plantmd/: __init__.py  descriptions.py  inference.py  model.py
static/css/: main.css
static/js/: main.js
templates/: base.html  index.html
tests/: conftest.py  test_app_smoke.py  test_descriptions.py  test_inference.py  test_model_loading.py
