[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plantmd"
version = "0.2.0"
description = "Plant disease classifier demo (VGG16 + Streamlit)"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9,<3.12"
dependencies = [
    "streamlit==1.39.0",
    "tensorflow==2.15.1",
    "numpy==1.26.4",
    "pillow==10.4.0",
    "huggingface-hub==0.25.2",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.9",
    "black==24.8.0",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pre-commit==3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/plantmd"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
